--- a/css/style.css
+++ b/css/style.css
@@ -7,49 +7,28 @@
 }
 *::selection{
   background: #FFC916;
-  /* background: #000000; */
-  /* color: #FFFFFF; */
-  
+  color: #000000;
 }
-.text--black{
+.link--out{
   text-decoration: none;
   color: #000000;
 }
-.clr--black{
-  color: #000000;
-}
-.clr--gray{
-  color: #646464;
-}
-.clr--dust{
-  color: #8D8D8f;
-}
-[class*="clr--"]:hover{
+[class*="link--out"]:hover{
   background: #EDEDED
-}
-.clr--bold{
-  font-weight: bold;
-}
-.crl--italic{
-  font-weight: bold;
-  font-style: italic;
-}
-.clr--thin{
-  font-weight: bold;
-  color: #545454;
 }
 /*common code end*/
 
 /*header start*/
 .header{
   background: #FFFFFF;
-  box-shadow: 5px 5px 50px rgba(0,0,0,0.06);
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.7);
   border-radius: 3px;
   display: flex;
-  width: 100%;
-  height: 60px;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
 }
 .header__logo{
   display: flex;
@@ -67,130 +46,56 @@
   display: inline;
   font-weight: normal;
 }
-.checkbox__input{
-  display: none;
-}
-.checkbox__input:checked ~ .checkbox__label{
-  transform: rotate(180deg);
-}
-.checkbox__input:checked ~ .header__nav{
-  left: 0;
-}
-.checkbox__label{
-  transition: all .3s linear;
-  padding: 20px;
-}
-.checkbox__menu{
-  height: 27px;
-  width: 27px;
-}
-.checkbox__img{
-  width: 100%;
-  height: 100%;
-}
-/* nav start */
+    /* nav start */
 .header__nav{
-  position: absolute;
-  height: 100vh;
-  top: 0;
-  left: -800px;
-  transition: all .3s linear;
   width: 100%;
-  overflow-x: hidden;
-}
-.nav__ul{
-  overflow-y: auto;
-  height: 100vh;
-  width: 250px;
-  background: #FFFFFF;
-  box-shadow: 5px 5px 60px rgba(0,0,0,0.1);
-  border-radius: 2px;
-}
-.nav__logo{
-  display: flex;
-  align-items: center;
-  padding: 20px 20px 20px 30px;
-}
-.nav__h2{
-  font-weight: normal;
 }
 .nav__li{
   list-style: none;
 }
-.nav__a{
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
-  padding: 15px 25px;
-  display: block;
-  font-size: 16px;
-  font-weight: bold;
-}
-.sub__ul{
-  display: none;
-}
-.nav__li:hover .sub__ul{
-  display: block;
-}
-.sub__a{
-  padding-left: 45px;
-}
-.menu--closer{
-  position: absolute;
-  left: 250px;
-  top: 0;
-  width: 550px;
-  height: 100vh;
-  background: rgba(0,0,0, 0.07)
-}
-/* nav end */
+    /* nav end */
 /*header end*/
-
-
-
-/* section start */
-.subj__h2{
-  text-align: center;
-  margin: 25px;
-  font-weight: normal;
-  font-size: 25px;
-  line-height: 40px;
-  word-spacing: 7px;
-  color: #171717;
-  text-shadow: 1px 1px 15px rgba(0,0,0,0.3);
-  font-family: Arial, Helvetica, sans-serif;
-  
-}
-/* section end */
-
 
 /* content start */
 .content{
   background: #F5F5F5;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1),
-              -5px -5px 20px rgba(0, 0, 0, 0.03); 
 }
 .content__item{
   background: #FFFFFF;
-  padding: 50px 20px;
+  padding: 45px 30px;
   margin-bottom: 50px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1),
+              -5px -5px 20px rgba(0, 0, 0, 0.03); 
 }
 .content__h2{
   font-weight: normal;
   font-size: 25px;
+  color: #000000;
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+.content__span{
+  font-weight: normal;
+  font-size: 10px;
   text-align: center;
   color: #000000;
-  padding: 20px;
+  padding: 6px 8px;
+  text-transform: uppercase;
+  background: #FFC916;
+  border-radius: 30px;
 }
 .content__p{
   line-height: 27px;
   color: #323232;
   font-size: 15px;
+  padding: 10px 0;
 }
 /* content start */
 
-
 /* footer start */
+
+
+
 /* footer end */
 
 
