--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
   width: 100%;
   height: 60px;
   z-index: 10;
+  padding: 20px;
 }
 .header__logo{
   display: flex;
@@ -39,12 +40,12 @@
 .header__img{
   height: 35px;
   width: 35px;
-  margin: 0 10px 0 20px;
 }
 .header__h1{
   font-size: 23px;
   display: inline;
   font-weight: normal;
+  padding: 10px
 }
     /* nav start */
 .header__nav{
