--- a/css/mobile.css
+++ b/css/mobile.css
@@ -56,7 +56,7 @@
   padding: 15px 25px;
   display: block;
   font-size: 16px;
-  font-weight: bold;
+  /* font-weight: bold; */
   color: #000000
 }
 .nav__a:hover{
@@ -65,6 +65,7 @@
 .nav__p{
   font-weight: normal;
   font-size: 23px;
+  padding: 10px;
 }
 .menu--closer{
   position: absolute;
