--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,9 @@
   color: var(--color);
 }
 [class*="link--out"]:hover{
-  background: rgba(255, 255, 255, 0.2)
+  background: rgba(0, 0, 0, 0.1);
+  background: var(--primary);
+  color: var(--color);
 }
 .t-l{
   font-size: 9px;
@@ -34,8 +36,10 @@
 
 /*header start*/
 .header{
-  background: var(--primary);
-  box-shadow: 5px 5px 15px rgba(0,0,0,0.7);
+  position: sticky;
+  top: 0;
+  background: #FFFFFF;
+  box-shadow: 5px 5px 100px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -117,6 +121,7 @@
   color: #FFFFFF;
   text-align: center;
   padding: 30px;
+  font-size: 12px;
 }
 /* footer end */
 
