--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@
 }
 .content__h2{
   font-weight: normal;
-  font-size: 25px;
+  font-size: 20px;
   color: #000000;
   padding: 10px 0;
   text-transform: uppercase;
@@ -107,7 +107,7 @@
 }
 .content__p{
   line-height: 27px;
-  color: #323232;
+  color: #5C5C5C;
   font-size: 15px;
   padding: 10px 0;
 }
